trying to fix jinja issues

--- a/templates/firehol/firehol.j2
+++ b/templates/firehol/firehol.j2
@@ -1,21 +1,21 @@
 version 6
 
-{% for service in services %}
-server_{{  service.name  }}_ports="{% for protocol in service.protocols  %}{{  protocol }}/{  service.port  }} "{% endfor %}
+  {% for service in services %}
+server_{{  service.name  }}_ports="{% for protocol in service.protocols  %}{{  protocol }}/{{  service.port  }} {% endfor %}"
 client_{{service.name  }}_ports="default"
-{% endfor %}
+  {% endfor %}
 
 
 interface {{ ansible_default_ipv4.interface }} internet
   protection strong
-  {% for service in services %}
-  {% if service.trusted is defined %}
+{% for service in services %}
+{% if service.trusted is defined %}
   server4 {{  service.name  }} accept src {{  service.trusted  }}
-  {% else %}
+{% else %}
   server4 {{  service.name  }} accept
-  {% endif %}
+{% endif %}
 
-  {% endfor %}
+{% endfor %}
   server ssh   accept
   client all   accept
 
