fixing jinja issues part 4

--- a/templates/firehol/firehol.j2
+++ b/templates/firehol/firehol.j2
@@ -10,10 +10,10 @@ client_{{service.name  }}_ports="default"
 interface {{ ansible_default_ipv4.interface }} internet
   protection strong
 {% for service in services %}
-{% if service.trusted == all %}
-  server4 {{  service.name  }} accept
-{% else %}
+{% if service.trusted is defined %}
   server4 {{  service.name  }} accept src {{  service.trusted  }}
+{% else %}
+  server4 {{  service.name  }} accept 
 {% endif %}
 {% endfor %}
   server ssh   accept
