changes to variables and updating readme

--- a/templates/firehol/firehol.j2
+++ b/templates/firehol/firehol.j2
@@ -12,7 +12,8 @@ interface {{ ansible_default_ipv4.interface }} internet
   protection strong
 {% for service in services %}
 {% if service.trusted is defined %}
-  server4 {{  service.name  }} accept src {{  service.trusted  }}
+{% for ip in service.trusted %}
+  server4 {{  service.name  }} accept src {% for ip in service.trusted %}{{  ip  }} {% endfor %}
 {% else %}
   server4 {{  service.name  }} accept
 {% endif %}
