jinja newline still missing

--- a/templates/firehol/firehol.j2
+++ b/templates/firehol/firehol.j2
@@ -1,5 +1,5 @@
 #jinja2: lstrip_blocks: "True"
-#jinja2: trim_blocks:False
+#jinja2: trim_blocks: "False"
 version 6
 
 {% for service in services %}
