--- a/templates/firehol/firehol.j2
+++ b/templates/firehol/firehol.j2
@@ -1,6 +1,13 @@
 #jinja2: lstrip_blocks: "True"
 version 6
 
+ipv6 interface any v6interop proto icmpv6
+  client ipv6neigh accept
+  server ipv6neigh accept
+  client ipv6mld accept
+  client ipv6router accept
+  policy return
+
 {% for service in services %}
 server_{{  service.name  }}_ports="{% for protocol in service.protocols  %}{{  protocol }}/{{  service.port  }} {% endfor %}"
 client_{{service.name  }}_ports="default"
