added empty list conditional

--- a/templates/firehol/firehol.j2
+++ b/templates/firehol/firehol.j2
@@ -17,6 +17,7 @@ client_{{service.name  }}_ports="default"
 
 interface {{ ansible_default_ipv4.interface }} internet
   protection strong
+{% if service is defined %}
 {% for service in services %}
 {% if service.trusted is defined %}
   server4 {{  service.name  }} accept src "{% for ip in service.trusted %}{{  ip  }} {% endfor %}"
@@ -24,5 +25,6 @@ interface {{ ansible_default_ipv4.interface }} internet
   server4 {{  service.name  }} accept
 {% endif %}
 {% endfor %}
+{% endif %}
   server ssh   accept
   client all   accept
